removed overflow story: to-do, fix later for another time

--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -187,8 +187,7 @@ body {
 }
 
 .comment-nodisplay {
-  color: red;
-  filter: drop-shadow(0 0 5px red);
+  color: black;
 }
 
 .comment-display {
